@@ -1487,8 +1487,9 @@ Collection.prototype.indexes = function indexes(callback) {
  *
  * Options
  *  - **readPreference** {String}, the prefered read preference (Server.READ_PRIMARY, Server.READ_SECONDARY, Server.READ_SECONDARY_ONLY).
+ *  - **explain** {Boolean}, return the query plan for the aggregation pipeline instead of the results.
  *
- * @param {Array|Objects} pipline a pipleline containing all the object for the execution.
+ * @param {Array} array containing all the aggregation framework commands for the execution.
  * @param {Object} [options] additional options during update.
  * @param {Function} callback returns matching documents.
  * @return {null}
@@ -1499,6 +1500,8 @@ Collection.prototype.aggregate = function(pipeline, options, callback) {
   callback = args.pop();
   options = args.length ? args.shift() : {};
   var self = this;
+
+  if(!Array.isArray(pipeline)) return callback(new Error("pipline must be an array"));
   
   // Check if we have more than one argument then just make the pipeline 
   // the remaining arguments
@@ -1508,12 +1511,21 @@ Collection.prototype.aggregate = function(pipeline, options, callback) {
   
   // Build the command
   var command = { aggregate : this.collectionName, pipeline : pipeline};
+  // Add all options
+  var keys = Object.keys(options);
+  // Add all options
+  for(var i = 0; i < keys.length; i++) {
+    command[keys[i]] = options[keys[i]];
+  }
+  
   // Execute the command
   this.db.command(command, options, function(err, result) {
     if(err) {
       callback(err);
     } else if(result['err'] || result['errmsg']) {
       callback(self.db.wrap(result));
+    } else if(typeof result == 'object' && result['serverPipeline']) {
+      callback(null, result);
     } else {
       callback(null, result.result);
     }      
