@@ -26,6 +26,7 @@
 - Fixed auth to work better when multiple connections are involved.
 - Default connection pool size increased to 10 connections.
 - Fixes for the ReadStream class to work properly with 0.8 of Node.js
+- Added explain function support to aggregation helper
 
 1.0.2 2012-05-15
 ----------------
